--- a/src/components/css/license.css
+++ b/src/components/css/license.css
@@ -3,3 +3,27 @@ html, body {
     background: rgba(29, 29, 29);
     color: white;
 }
+
+a:link { 
+    color: hsla(334, 100%, 45%, 1);
+    text-decoration: none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background: rgba(29, 29, 29);
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(143, 38, 84, 0.8);
+    border-radius: 12px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: hsla(334, 100%, 45%, 1);
+}
